syntax = "proto3";

package metrics;

option go_package = "github.com/FlutterDizaster/ya-metrics/proto";

message Metric {
    string id = 1;
    string kind = 2;
    int64 delta = 3;
    double value = 4;
}
message AddMetricsRequest {
    repeated Metric metrics = 1;
}

message AddMetricsResponse {
    repeated Metric metrics = 1;
}

service MetricsService {
    rpc AddMetrics(AddMetricsRequest) returns (AddMetricsResponse);
}